@@ -1,3 +1,7 @@
+2003-01-10  Reed Loden  <reed@reedloden.com>
+
+	* Add something from u2.10.12.
+
 2003-01-09  Reed Loden  <reed@reedloden.com>
 
 	* Sync to release version of u2.10.11.04.
